--- a/sel2png.cfg
+++ b/sel2png.cfg
@@ -1,13 +1,34 @@
-#CBAR_MIN     CBAR_MAX    VECTORS     VECTOR_SCALE     VECTOR_COLOR
- 0            2         0           0.005            white
+#CBAR_MIN     CBAR_MAX     COLOR_MAP    
+ -1           -1           jet         
+#                         
+# These parameters control the colour map of the field variable to be plotted.
 #
+#        CB_MIN    = min value of the color bar (-1 for defaults)
+#        CB_MAX    = max value of the color bar (-1 for defaults)
+#        COLOR_MAP = the name of the Matplotlib colour map
+#                    (jet, jet_r, terrain, etc)
 #
-# these are comment lines
-#        CB_MIN = min value of the color bar (-1 for defaults)
-#        CB_MAX = max value of the color bar (-1 for defaults)
-#       VECTORS = 0 --> don't show vectors
-#               = 1 --> show vectors
-# VECTOR_SCALE  = 0.005 --> vary this until desired plot is obtained
-# VECTOR_COLOUR = white --> standard matplotlib colour codes apply
+# VECTORS     VECTOR_SCALE     VECTOR_COLOR     VECTOR_GRID    VECTOR_GRID_SIZE
+  0           0.005            black            0              1
 #
-# DO NOT CHANGE THE FORMAT OF THIS FILE!!!
+# These parameters control the vectors to be plotted (if VECTORS flag is on)
+#
+#          VECTORS = flag to show vectors (=0 do not show, =1 show vectors)
+#    VECTOR_SCALE  = Matplotlib's vector scale parameter (=0.005 default)
+#    VECTOR_COLOUR = Matplotlib's vector colour (black, white, etc)
+#      VECTOR_GRID = flag whether or not to show vectors on a grid
+#                    (=0 don't show vectors on a grid, =1 show vectors on a grid)
+# VECTOR_GRID_SIZE = the grid cell spacing, in meters, on which to show vectors
+#
+#ZOOM  XLL          YLL           XUR           YUR
+ 0     -1           -1            -1            -1
+# 
+# These parameters control the zoom of the plot
+#            ZOOM = zoom flag (=0 no zoom, =1 yes zoom)
+#             XLL = the x value of the lower left corner of the zoom box
+#             YLL = the y value of the lower left corner of the zoom box
+#             XUR = the x value of the upper right corner of the zoom box
+#             YUR = the y value of the upper right corner of the zoom box
+#
+# DO NOT CHANGE THE FORMAT OF THIS FILE. THE SCRIPT sel2png.py ONLY READS
+# LINES 2, 12 AND 24 OF THIS FILE!!!
