--- a/sel2png.cfg
+++ b/sel2png.cfg
@@ -8,17 +8,18 @@
 #        COLOR_MAP = the name of the Matplotlib colour map
 #                    (jet, jet_r, terrain, etc)
 #
-# VECTORS     VECTOR_SCALE     VECTOR_COLOR     VECTOR_GRID    VECTOR_GRID_SIZE
-  0           0.005            black            0              1
+# VECTORS     SCALE     WIDTH     COLOR     GRID     GRID_SIZE
+  1           10        0.005     black     0        1
 #
 # These parameters control the vectors to be plotted (if VECTORS flag is on)
 #
 #          VECTORS = flag to show vectors (=0 do not show, =1 show vectors)
-#    VECTOR_SCALE  = Matplotlib's vector scale parameter (=0.005 default)
-#    VECTOR_COLOUR = Matplotlib's vector colour (black, white, etc)
-#      VECTOR_GRID = flag whether or not to show vectors on a grid
+#           SCALE  = Matplotlib's vector scale parameter
+#            WIDTH = Matplotlib's width scale parameter
+#           COLOUR = Matplotlib's vector colour (black, white, etc)
+#             GRID = flag whether or not to show vectors on a grid
 #                    (=0 don't show vectors on a grid, =1 show vectors on a grid)
-# VECTOR_GRID_SIZE = the grid cell spacing, in meters, on which to show vectors
+#        GRID_SIZE = the grid cell spacing, in meters, on which to show vectors
 #
 #ZOOM  XLL          YLL           XUR           YUR
  0     -1           -1            -1            -1
@@ -31,4 +32,4 @@
 #             YUR = the y value of the upper right corner of the zoom box
 #
 # DO NOT CHANGE THE FORMAT OF THIS FILE. THE SCRIPT sel2png.py ONLY READS
-# LINES 2, 12 AND 24 OF THIS FILE!!!
+# LINES 2, 12 AND 25 OF THIS FILE!!!
